--- a/pruebas_api/index.html
+++ b/pruebas_api/index.html
@@ -8,9 +8,11 @@
 <body>
     <script>
 
+        let tarea = "aprender React";
+
         fetch("/api-todo/crear",{
             method : "POST",
-            body : '{"tarea" : "valido"}',
+            body : JSON.stringify({tarea}),
             headers : {
                 "Content-type" : "application/json"
             }
