--- a/pruebas_api/index.html
+++ b/pruebas_api/index.html
@@ -8,7 +8,7 @@
 <body>
     <script>
 
-        let tarea = "aprender React aaa";
+        let tarea = "aprender React";
 
         fetch("/api-todo/actualizar/1/1",{
             method : "PUT",
